added reset css to css folder

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -1,7 +1,6 @@
 <head>
 <!-- CSS Reset -->
-<link rel="stylesheet" type="text/css"
-	href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
+<link type="text/css" rel="stylesheet" href="css/cssreset-min.css">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 <!-- Favicon -->
@@ -14,11 +13,6 @@
 <link type="text/css" rel="stylesheet" href="css/accordianCSS.css">
 <link type="text/css" rel="stylesheet" href="css/webkitscrollbar.css">
 <link type="text/css" rel="stylesheet" href="css/customselect.css">
-
-<!-- Web Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-<link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
 
 <!-- Setup Jquery -->
 <link type="text/css" rel="stylesheet"
