--- a/GraphicsProject/war/html/shaders/fragment2DShader.html
+++ b/GraphicsProject/war/html/shaders/fragment2DShader.html
@@ -181,12 +181,50 @@
 		return texture2D( textureMap , vec2(pixelColor.r , 0)).rgb;
 	}
 
+	vec3 deform( in vec2 p )
+	{
+    	vec2 uv;
+
+		float time = 0.0;
+
+    	vec2 q = vec2( sin(1.1*time+p.x),sin(1.2*time+p.y) );
+
+    	float a = atan(q.y,q.x);
+    	float r = sqrt(dot(q,q));
+
+    	uv.x = sin(0.0+1.0*time)+p.x*sqrt(r*r+1.0);
+    	uv.y = sin(0.6+1.1*time)+p.y*sqrt(r*r+1.0);
+
+    	return texture2D(uSampler,uv*.5).xyz;
+	}
+
+	vec3 colorOffset(){
+		vec2 p = -1.0 + 2.0 * gl_FragCoord.xy / vec2(width, height);
+		vec2 s = p;
+
+		vec3 total = vec3(0.0);
+		vec2 d = (vec2(0.0,0.0)-p)/40.0;
+		float w = 1.0;
+		for( int i=0; i<40; i++ )
+		{
+			vec3 res = deform(s);
+			res = smoothstep(0.1,1.0,res*res);
+        	total += w*res;
+        	w *= .99;
+        	s += d;
+    	}
+    	total /= 40.0;
+    	float r = 1.5/(1.0+dot(p,p));
+    	return total*r;
+	}
+
     void main()
     {
 		//vec2 test = vec2(vTextureCoord, vTextureCoord);
 		vec3 pixelColor = texture2D( uSampler, vUv ).rgb;
 		
 		if(mode == 0){
+			//pixelColor = colorOffset();
 			pixelColor = contrastCalc(pixelColor);
 			pixelColor = brightnessCalc(pixelColor);
 		} else if(mode == 1){
