--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -14,6 +14,11 @@
 <link type="text/css" rel="stylesheet" href="css/webkitscrollbar.css">
 <link type="text/css" rel="stylesheet" href="css/customselect.css">
 
+<!-- Web Fonts -->
+<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
+
 <!-- Setup Jquery -->
 <link type="text/css" rel="stylesheet"
 	href="vendor/jquery/css/dark-hive/jquery-ui-1.8.18.custom.css">
