--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+WebGL: INVALID_VALUE: texImage2D: invalid image
+WebGL: INVALID_OPERATION: generateMipmap: level 0 not power of 2 or not all the same size
 <!-- The HTML 4.01 Transitional DOCTYPE declaration-->
 <!-- above set at the top of the file will set     -->
 <!-- the browser's rendering engine into           -->
@@ -9,8 +11,7 @@
 <html>
 	<head>
 <!-- CSS Reset -->
-<link rel="stylesheet" type="text/css"
-	href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
+<link type="text/css" rel="stylesheet" href="css/cssreset-min.css">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 <!-- Favicon -->
