--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -73,6 +73,21 @@
 <script src="js/2DMode/Tools/FlipImageHorizontal.js"></script>
 <script src="js/2DMode/Tools/RotateClockwise.js"></script>
 <script src="js/2DMode/Tools/RotateCounterClockwise.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-31371936-1']);
+  _gaq.push(['_setDomainName', 'googlecode.com']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 <title>WebGL Img Editor</title>
 </head>
